[gd_scene load_steps=15 format=2]

[ext_resource path="res://graphic/bigbulletAnim.png" type="Texture" id=1]
[ext_resource path="res://graphic/bigbullet.png" type="Texture" id=2]
[ext_resource path="res://scripts/BigBullet.gd" type="Script" id=3]
[ext_resource path="res://Audio/laserrocket-5984.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=17]
radius = 22.3607

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 0.01
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "hit",
"speed": 15.0
} ]

[node name="BigBullet" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 17 )

[node name="Big" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "hit"
frame = 6

[node name="BigExplosionSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0

[connection signal="area_entered" from="." to="." method="_on_BigBullet_area_entered"]
[connection signal="animation_finished" from="Big" to="." method="_on_Big_animation_finished"]
[connection signal="finished" from="BigExplosionSFX" to="." method="_on_BigExplosionSFX_finished"]
